<resources>
    <string name="app_name">DocTell</string>
    <string name="add_book">Add Book</string>
    <string name="menu">Menu</string>
    <string name="topLabel">DocTell</string>


    <!-- Settings -->
    <string name="pref_voice">Voice</string>
    <string name="pref_cat_language_voice">Language &amp; Voice</string>
    <string name="pref_lang_title">Language</string>
    <string name="pref_lang_summary">Choose the app’s TTS language</string>
    <string name="pref_privacy_title">Privacy &amp; data</string>
    <string name="pref_analytics_enabled">Allow anonymous analytics</string>
    <string name="pref_crashlytics_enabled">Allow crash reports</string>
    <string name="pref_url_pdf">PDF resources</string>
    <string name="pref_ocean_of_pdf">ocean of pdf</string>

    <string name="pref_tts_speed_title">TTS speed</string>
    <string name="pref_tts_speed_summary">Voice Speed</string>

    <!-- URL -->
    <string name="pref_url_ocean_of_pdf">https://oceanofpdf.com/</string>

    <!-- ReaderActivity -->
    <string name="pref_pause">Pause</string>
    <string name="pref_play">Play</string>
    <string name="pref_read">Read</string>
    <string name="pref_next">Next</string>
    <string name="pref_prev">Prev</string>
    <string name="btn_options">Options</string>

    <!-- Chapters -->
    <string name="close">close</string>
    <string name="chapters">Chapters</string>

    <!-- MainActivity-->
    <string name="topSubtitle">Let your PDFs come to life</string>
    <string name="nav_library">Library</string>
    <string name="nav_add">Add</string>
    <string name="nav_settings">Settings</string>

    <!-- dialog_sort_library -->
    <string name="sort_library_title">Sort library</string>
    <string name="sort_library_subtitle">Choose how you want your books ordered.</string>
    <string name="sort_a_z">Title (A–Z)</string>
    <string name="sort_z_a">Title (Z–A)</string>
    <string name="date_new">Date (newest first)</string>
    <string name="date_old">Date (oldest first)</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_apply">Apply</string>

    <!-- popup -->
    <string name="document_options_title">Document options</string>
    <string name="document_action_open">Open</string>
    <string name="document_action_rename">Rename</string>
    <string name="document_action_close">Close</string>
    <string name="document_action_delete">Delete</string>

    <!-- rename -->
    <string name="rename_title">Rename document</string>
    <string name="rename_hint">New title</string>
    <string name="action_save">Save</string>
    <string name="rename_error_empty_title">Please enter a title</string>

    <!-- options -->
    <string name="step_text">Step length</string>
    <string name="btn_step_sentences">Sentences</string>
    <string name="btn_step_page">Page</string>


</resources>